@@ -1,0 +1,89 @@
+<h1>10月東京瘋狂活動！你準備好了嗎？</h1>
+<p>十月東京瘋狂活動！你準備好了嗎？</p>
+<p></p>
+<p>最令人恐怖的月份來臨了，這意味著東京將會有許多令人血脈噴張、心跳加速、指甲捲曲的萬聖節活動。但你會鬆一口氣——或者可能會感到失望——得知並非所有十月的活動都與萬聖節有關；還有古老的江戶節慶、舞蹈比賽，甚至還有幾場煙花表演可以欣賞。</p>
+<p></p>
+<p>關於東京整年頂級活動的完整指南，請點擊這裡——按月份排序。</p>
+<p></p>
+<p>1. 御會式祭典的萬燈儀式</p>
+<p></p>
+<p>日期：10月12日</p>
+<p>地點：池上本門寺（Ota）</p>
+<p></p>
+<p>美麗的燈籠無處不在</p>
+<p></p>
+<p>御會式祭典——紀念日蓮逝世周年紀念日的佛教節日——的亮點是萬燈（10,000燈）儀式。大約3,000人攜帶裝飾有櫻花的神聖燈籠，沿著前往池上本門寺的路線行進。壯麗的遊行從下午6:30開始，一直持續到午夜，圍繞著寺廟和池上站。</p>
+<p></p>
+<p>2. 川越祭</p>
+<p></p>
+<p>日期：10月19-20日</p>
+<p>地點：川越</p>
+<p></p>
+<p>高聳的花車和喧鬧的氣氛</p>
+<p></p>
+<p>川越被暱稱為“小江戶”，因為它的一些街道仍然類似於江戶時代。節日特色是高聳的、精緻的花車，圍繞著川越倉庫街區遊行。一直待到晚上，事情變得更加喧鬧——傳統音樂表演、舞蹈和紙燈籠。當然，為了真正的色彩繽紛的景象，花車將被點亮。</p>
+<p></p>
+<p>3. 多摩川煙花大會</p>
+<p></p>
+<p>日期：10月5日</p>
+<p>地點：二子玉川站</p>
+<p></p>
+<p>東京最大的秋季煙花</p>
+<p></p>
+<p>作為秋季最大的煙花活動之一，多摩川煙花大會有著良好的聲譽。6,000發煙花將在二子玉川站旁的河床上空綻放。由於這是一個受歡迎的家庭區域，將會非常繁忙，因此主辦方建議至少提前一小時到達您的位置。</p>
+<p></p>
+<p>4. 池袋夜來祭舞蹈競賽</p>
+<p></p>
+<p>日期：10月12-13日</p>
+<p>地點：池袋</p>
+<p></p>
+<p>舞蹈迷們的福音</p>
+<p>十月東京瘋狂活動！你準備好了嗎？</p>
+<p></p>
+<p>池袋福禄祭（Fukuro Matsuri）的前半部分已經在九月舉行，但後半部分即將登場，所以別錯過了！這個節日也被稱為東京夜來祭舞蹈競賽（Tokyo Yosakoi Contest），是一個專門的夜來祭舞蹈比賽。夜來祭是一種充滿活力的傳統舞蹈，以使用鳴子（Naruko）為特色。雖然舞蹈有傳統的起源，但現在常常將基本元素與現代音樂和舞蹈動作融合在一起。由於這是一個比賽，你將看到許多不同的團隊表演他們的夜來祭舞蹈。</p>
+<p></p>
+<p>5. 高円寺節日（Kōenji Festival）</p>
+<p></p>
+<p>日期：10月26-27日</p>
+<p>地點：高円寺</p>
+<p></p>
+<p>這是一個社區節日，位於東京最酷的地點之一。有多少個日本節日有免費的戶外職業摔跤？不是很多，但高円寺節日就是這樣一個活動。雖然它不如其他節日（如東京高圓寺阿波舞）那樣有名，但這個社區主辦的盛事肯定會讓你興奮。除了摔跤比賽，還會有音樂表演、手工藝市場、吉祥物、蓋章比賽等等。</p>
+<p></p>
+<p>6. 東京拉麵節（Tokyo Ramen Festa）</p>
+<p></p>
+<p>日期：10月24日至11月4日</p>
+<p>地點：駒澤奧林匹克公園</p>
+<p></p>
+<p>來品嚐各種拉麵吧！沒有多少地方可以讓你在一天內品嚐到日本所有最好的拉麵。從豚骨到醬油，你可以在東京拉麵節品嚐到各種不同的湯麵。</p>
+<p></p>
+<p>東京拉麵節分為三部分，有輪流的供應商，所以每次你去都可以品嚐到不同的東西。請確保你到達時餓了，如果你想嘗試一個像樣的數量。碗的價格約為1,100日元，需要使用特殊的票券，可以在現場或提前購買。</p>
+<p></p>
+<p>7. 東京萬聖節活動（Tokyo Halloween events）</p>
+<p></p>
+<p>日期：整個十月</p>
+<p>地點：東京各地</p>
+<p></p>
+<p>萬聖節不是只在10月31日，東京的萬聖節慶祝活動近年來已經真正起飛。全市各地都有活動：神樂坂、六本木、表參道、池袋、川崎等地。活動的家庭友好程度不同，從“非常適合小孩子”到“也許不太適合帶孩子來”。 </p>
+<p></p>
+<p>以下是四個萬聖節活動，值得添加到你的日曆中：</p>
+<p></p>
+<p>- 化け猫祭（Bake Neko Festival）</p>
+<p>東京萬聖節瘋狂活動！你準備好了嗎？</p>
+<p></p>
+<p>萬聖節即將來臨，東京將會舉辦多個萬聖節活動。以下是幾個值得關注的活動：</p>
+<p></p>
+<p>- 吉祥寺萬聖節節（Kichijoji Halloween Festa）</p>
+<p>- 萬聖節之夜在森林中（Halloween Night in the Forest）</p>
+<p>- 池袋萬聖節Cosplay節（Ikebukuro Halloween Cosplay Festival）</p>
+<p></p>
+<p>想知道更多關於東京萬聖節2024年的活動嗎？請查看我們的東京萬聖節2024年指南，裡面有詳細的活動列表。</p>
+<p></p>
+<p>請注意，活動信息可能會有變動，我們盡力確保信息的準確性。文章首次發布於2016年10月，最近一次更新是在2024年9月，由亞歷山德拉·齊敏斯基更新。</p>
+<p></p>
+<p>訂閱我們的東京便宜情報，直接發送到您的郵箱。</p>
+<p></p>
+<p>推薦附近的酒店：</p>
+<p></p>
+<p>- 池袋0.6公里</p>
+<p>- 池袋0.6公里</p>
+<p>- 巢鴨2.3公里</p>
