@@ -1,2 +1,3 @@
 https://tokyocheapo.com/entertainment/infographic-koyo-tokyo-autumn-leaves/
 https://tokyocheapo.com/entertainment/event-posts/the-biggest-autumn-fireworks-festival-returns-to-tokyo-this-week/
+https://tokyocheapo.com/entertainment/tokyo-events-october/
